<resources>
    <string name="app_name">Insurance Line</string>
    <string name="action_settings">Settings</string>
    <string name="error_loading_sample">There was a problem loading the samples</string>
    <string name="empty_samples">There aren\'t any samples</string>
    <string name="dialog_action_ok">OK</string>
    <string name="dialog_action_cancel">Cancel</string>
    <string name="dialog_error_title">Sorry</string>
    <string name="login_info">Log in with the username and password provided in your Insuranceline communication.</string>
    <string name="login_email_button">Username</string>
    <string name="login_password_button">Password</string>
    <string name="login_button_action">Get Started</string>
    <string name="error_invalid_password">This Password is too short</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_not_match_password">Password and Confirmation does not match</string>
    <string name="error_unauthorized_user">The email/phone you entered is incorrect. Please try again.</string>
    <string name="termcond_accept">Accept</string>
    <string name="termcond_decline">Decline</string>
    <string name="empty"/>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="term_cond_activity_name"><![CDATA[Terms & Conditions]]></string>
    <string name="activity_name_fit_bit_connect">Connect</string>
    <string name="activity_name_fit_bit_connected">Connected</string>
    <string name="action_finish">Finish</string>
    <string name="more_manage_fit_bit">Manage Fitbit Permissions</string>
    <string name="more_change_password">Change Password</string>
    <string name="more_view_terms_cond"><![CDATA[View Terms & Conditions]]></string>
    <string name="more_view_privacy_policy">View Privacy Policy</string>
    <string name="more_about_insuranceline">About Insuranceline</string>
    <string name="more_app_version">Version</string>
    <string name="more_logout">Log Out</string>
    <string name="change_password_old_password">Old Password</string>
    <string name="change_password_new_password">New Password</string>
    <string name="change_password_confirm_password">Confirm New Password</string>
    <string name="about_text">InsurenceLine</string>
    <string name="test_message_very_long">Lorem ipsum dolor sit amet, nibh enim volutpat feugiat semper nostra est, amet pellentesque condimentum elementum purus. Viverra nascetur, blandit sapien quisque lectus, curabitur maecenas. Commodo nullam sit nullam mi erat aliquet. Donec metus nisl vehicula donec. Morbi libero nulla, felis sagittis felis in vehicula, suspendisse nunc lacinia sodales. Non ac egestas vehicula odio, nunc mattis ut neque quam nulla, non nulla vivamus iaculis augue ultrices iusto. Turpis dolor magna justo libero, semper lectus vehicula vel. Aliquam iaculis. Nec integer sapien dis purus, praesent eget hendrerit nec proin sollicitudin. Eget lacus ac velit justo in, pharetra leo massa ut lacus diam convallis, quam integer cras odio nec. Neque integer morbi. Nulla suspendisse commodo quis, justo pellentesque vivamus, pellentesque fusce risus erat scelerisque curabitur, quisque varius consectetuer.. Lorem ipsum dolor sit amet, nibh enim volutpat feugiat semper nostra est, amet pellentesque condimentum elementum purus. Viverra nascetur, blandit sapien quisque lectus, curabitur maecenas. Commodo nullam sit nullam mi erat aliquet. Donec metus nisl vehicula donec. Morbi libero nulla, felis sagittis felis in vehicula, suspendisse nunc lacinia sodales. Non ac egestas vehicula odio, nunc mattis ut neque quam nulla, non nulla vivamus iaculis augue ultrices iusto. Turpis dolor magna justo libero, semper lectus vehicula vel. Aliquam iaculis. Nec integer sapien dis purus, praesent eget hendrerit nec proin sollicitudin. Eget lacus ac velit justo in, pharetra leo massa ut lacus diam convallis, quam integer cras odio nec. Neque integer morbi. Nulla suspendisse commodo quis, justo pellentesque vivamus, pellentesque fusce risus erat scelerisque curabitur, quisque varius consectetuer. Lorem ipsum dolor sit amet, nibh enim volutpat feugiat semper nostra est, amet pellentesque condimentum elementum purus. Viverra nascetur, blandit sapien quisque lectus, curabitur maecenas. Commodo nullam sit nullam mi erat aliquet. Donec metus nisl vehicula donec. Morbi libero nulla, felis sagittis felis in vehicula, suspendisse nunc lacinia sodales. Non ac egestas vehicula odio, nunc mattis ut neque quam nulla, non nulla vivamus iaculis augue ultrices iusto. Turpis dolor magna justo libero, semper lectus vehicula vel. Aliquam iaculis. Nec integer sapien dis purus, praesent eget hendrerit nec proin sollicitudin. Eget lacus ac velit justo in, pharetra leo massa ut lacus diam convallis, quam integer cras odio nec. Neque integer morbi. Nulla suspendisse commodo quis, justo pellentesque vivamus, pellentesque fusce risus erat scelerisque curabitur, quisque varius consectetuer.</string>
    <string name="test_message_medium">Lorem ipsum dolor sit amet, nibh enim volutpat feugiat semper nostra est, amet pellentesque condimentum elementum purus. Viverra nascetur, blandit sapien quisque lectus, curabitur maecenas. Commodo nullam sit nullam mi erat aliquet. Donec metus nisl vehicula donec. Morbi libero nulla, felis sagittis felis in vehicula, suspendisse nunc lacinia sodales. </string>
    <string name="test_message_short">Lorem ipsum dolor sit amet, nibh enim volutpat feugiat semper nostra est, amet pellentesque condimentum elementum purus.</string>
    <string name="first_reward">1st Reward</string>
    <string name="see_term_cond">*Please see Terms and Conditions section for full details.</string>
    <string name="second_reward">2nd Reward</string>
    <string name="unlocked_second_reward_message">Complete your first goal and you will unlock the second reward. A New Balance Voucher worth $30*</string>
    <string name="third_reward">3rd Reward</string>
    <string name="unlocked_third_reward_message">Complete your second goal and you will unlock the third reward. A New Balance Voucher worth $50*</string>
    <string name="first_goal">1st Goal</string>
    <string name="first_goal_challenge_text">Complete 100.000 steps and you will be eligible to redeem a Village Cinema Movie Voucher worth $20*</string>
    <string name="second_goal_challenge_text">Complete 200.000 steps and you will be eligible to redeem a New Balance Voucher worth $30*</string>
    <string name="third_goal_challenge_text">Complete 500.000 steps and you will be eligible to redeem a Healt Voucher worth $50*</string>
    <string name="second_goal">2nd Goal</string>
    <string name="third_goal">3rd Goal</string>
    <string name="goal_def">100,000 step left to acheive your goal!</string>
    <string name="connect_fit_bit_title">Connect FitBit</string>
    <string name="connect_fit_bit_info">When you connect your Fitbit to our app, your Fitbit activity will automatically show up. </string>
    <string name="dashboard_goal_need_be_start_inf">Start working towards your goals and rewards go to the goals tab and select start!</string>
    <string name="dashboard_permission_need_info"><![CDATA[There is no data to display. Go to <b> More > Manage Fitbit Permissions</b> and check the permissions.]]></string>
    <string name="btn_start_text">Start</string>
    <string name="btn_progress_text">In Progress</string>
    <string name="btn_done_text">done</string>
    <string name="action_rest_goal">Test Mode</string>
    <string name="reward_achievement_def">You have completed your first goal of 1000000 steps.</string>
    <string name="reward_price_def">Claim your reward of a 3 month subscription to Good Health Magazine and get great health tips.</string>
    <string name="submit_email_def">Please provide the email address which you would like the reward to be sent to:</string>
    <string name="reward_sent_info">Your reward has been sent to your email.</string>
    <string name="next_goal_def">New Goal - 4000,000 steps</string>
    <string name="boost_notification_push_text">Insuranceline Active </string>
    <string name="reminder_notification_push_text">Insuranceline Active </string>
    <string name="reminder_notification_content_14_days">Get rewarded, don\'t forget to check your progress!</string>
    <string name="debug_boost_notification_def"><b>21 Day timer:</b> Set small amount of time to test it.</string>
    <string name="debug_reminder_notification_def"><b>14 Day timer:</b> Set small amount of time to test it..</string>
    <string name="debug_campain_end"> <b>Campaign End:</b>  Campaign is going to be end in according to the this amount of time</string>
    <string name="debug_target_def"><b>Target:</b> Set the target of first goal. (Ex: 100 steps) Algorithm will calculate the next goal according to the achievement time </string>
    <string name="debug_test_result_def">These fields are updated by each time when you open the debug console.</string>
    <string name="tc_rejected_error">If you decline the Terms and Conditions you can not proceed into the Insuranceline Active app.</string>
    <string name="boost_notification_content_21_days">Get healthy and rewarded, don\'t forget to track your steps with Insuranceline!</string>
</resources>