<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/login_info"/>

        <EditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/login_edittext_bg"
            android:drawableLeft="@mipmap/ic_launcher"
            android:drawablePadding="7dp"
            android:hint="@string/login_email_button"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/login_edittext_bg"
            android:drawableLeft="@mipmap/ic_launcher"
            android:drawablePadding="7dp"
            android:hint="@string/login_password_button"
            android:inputType="textPassword"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_button_bg"
            android:layout_marginTop="20dp"
            android:text="@string/login_button_action"
            android:textColor="@color/white"
            />

    </LinearLayout>


</RelativeLayout>