<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
    android:background="#FFFFFFFF">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="130dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="50dp"
            android:src="@drawable/img_village_"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:text="@string/first_reward"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/reward_def"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/test_message_short"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/see_term_cond"
            android:textSize="9sp"/>
    </LinearLayout>

    <Button
        android:id="@+id/start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="70dp"
        android:background="@drawable/orange_button_bg"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:enabled="false"/>

</RelativeLayout>