<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFFFF"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/goal_cup"
            android:layout_width="wrap_content"
            android:layout_height="130dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:src="@drawable/icon_goal1" />

        <TextView
            android:id="@+id/goal_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:text="@string/first_goal"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/goal_def"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/first_goal_challenge_text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/see_term_cond"
            android:textSize="9sp" />
    </LinearLayout>

    <Button
        android:id="@+id/start_button"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="70dp"
        android:background="@drawable/orange_button_bg"
        android:clickable="true"
        android:text="Start"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:gravity="center"
        android:textAllCaps="false"
        android:enabled="false"/>

</RelativeLayout>